# luminosity

./: .gitignore  Colour.hs  Export.hs  Intersect.hs  LICENSE.md  Main.hs  Misc.hs  Parse.hs  README.md  Render.hs  STYLE.md  Sample.json  Trace.hs  Vector.hs  build.sh  luminosity.cabal
examples/: example.json
src/: Main.hs
src/Luminosity/: Colour.hs  Export.hs  Intersect.hs  Misc.hs  Parse.hs  Render.hs  Trace.hs  Vector.hs
src/Luminosity/Data/: Colour.hs  Vector.hs
src/Luminosity/Image/: Export.hs
src/Luminosity/Text/: Parse.hs
